--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             <button class="filter-tab active" data-category="all">All</button>
             <button class="filter-tab" data-category="Landscape">Landscape</button>
             <button class="filter-tab" data-category="Portrait">Portrait</button>
-            <button class="filter-tab" data-category="Street">Street</button>
+            <button class="filter-tab" data-category="Street">B|W</button>
         </div>
 
         <!-- Loading State -->
@@ -690,3 +690,4 @@
 </body>
 
 </html>
+
