--- a/index.html
+++ b/index.html
@@ -547,16 +547,17 @@
 
     <!-- Footer -->
     <footer>
-        <p>
-            <strong>L</strong>ight <strong>A</strong>nd <strong>N</strong>arrative <strong>E</strong>xpression<br>
-            <strong>D</strong>iscover <strong>I</strong>nspire <strong>K</strong>indle <strong>O</strong>pportunities
+        <p style="margin-bottom: 20px; color: #777; line-height: 1.6; max-width: 500px; margin-left: auto; margin-right: auto;">
+            Photographer based in Kyoto, Japan<br>
+            <strong style="letter-spacing: 2px; color: #999;">L</strong>ight <strong style="letter-spacing: 2px; color: #999;">A</strong>nd <strong style="letter-spacing: 2px; color: #999;">N</strong>arrative <strong style="letter-spacing: 2px; color: #999;">E</strong>xpression<br>   
+            <strong style="letter-spacing: 2px; color: #999;">D</strong>iscover <strong style="letter-spacing: 2px; color: #999;">I</strong>nspire <strong style="letter-spacing: 2px; color: #999;">K</strong>indle <strong style="letter-spacing: 2px; color: #999;">O</strong>pportunities
         </p>
-        <p style="margin-top: 30px;">
-            <a href="https://instagram.com/lane_diko" target="_blank">Instagram</a>
-            <span style="margin: 0 15px;">·</span>
-            <span>silentlane@gmail.com</span>
+        <p style="margin-top: 15px; margin-bottom: 15px;">
+            <a href="https://instagram.com/lane_diko" target="_blank" style="color: #777; margin: 0 12px; text-decoration: none;">Instagram</a>
+            <span style="color: #777; margin: 0 12px;">·</span>
+            <span style="color: #777; margin: 0 12px; cursor: text;">silentlane@gmail.com</span>
         </p>
-        <p style="margin-top: 30px;">© 2025 Lane DIKO</p>
+        <p style="margin-top: 20px;">© 2025 Lane DIKO</p>
     </footer>
 
     <!-- Modal -->
@@ -750,3 +751,4 @@
     </script>
 </body>
 </html>
+
