--- a/index.html
+++ b/index.html
@@ -657,17 +657,17 @@
 
     <!-- Footer -->
     <footer>
-        <p style="margin-bottom: 20px; color: #777; line-height: 1.6; max-width: 500px; margin-left: auto; margin-right: auto;">
+        <p style="margin-bottom: 20px; font-family: 'Helvetica Neue', Arial, sans-serif; color: #777; line-height: 1.6; max-width: 500px; margin-left: auto; margin-right: auto;">
             Photographer based in Kyoto, Japan<br>
             <strong style="letter-spacing: 2px; color: #999;">L</strong>ight <strong style="letter-spacing: 2px; color: #999;">A</strong>nd <strong style="letter-spacing: 2px; color: #999;">N</strong>arrative <strong style="letter-spacing: 2px; color: #999;">E</strong>xpression<br>   
             <strong style="letter-spacing: 2px; color: #999;">D</strong>iscover <strong style="letter-spacing: 2px; color: #999;">I</strong>nspire <strong style="letter-spacing: 2px; color: #999;">K</strong>indle <strong style="letter-spacing: 2px; color: #999;">O</strong>pportunities
         </p>
-        <p style="margin-top: 15px; margin-bottom: 15px;">
+        <p style="margin-top: 15px; font-family: 'Helvetica Neue', Arial, sans-serif; margin-bottom: 15px;">
             <a href="https://instagram.com/lane_diko" target="_blank" style="color: #777; margin: 0 12px; text-decoration: none;">Instagram</a>
             <span style="color: #777; margin: 0 12px;">·</span>
             <span style="color: #777; margin: 0 12px; cursor: text;">silentlane@gmail.com</span>
         </p>
-        <p style="margin-top: 20px; font-family: 'Courier New', Courier, monospace; font-size: 0.8em; letter-spacing: 1.5px;">© 2025 Lane DIKO</p>
+        <p style="margin-top: 20px; font-family: Georgia, 'Times New Roman', serif; font-size: 0.8em; letter-spacing: 1.5px;">© 2025 Lane DIKO</p>
     </footer>
 
     <!-- Modal with Zoom -->
@@ -964,3 +964,4 @@
     </script>
 </body>
 </html>
+
