--- a/index.html
+++ b/index.html
@@ -662,10 +662,13 @@
             <strong style="letter-spacing: 2px; color: #999;">L</strong>ight <strong style="letter-spacing: 2px; color: #999;">A</strong>nd <strong style="letter-spacing: 2px; color: #999;">N</strong>arrative <strong style="letter-spacing: 2px; color: #999;">E</strong>xpression<br>   
             <strong style="letter-spacing: 2px; color: #999;">D</strong>iscover <strong style="letter-spacing: 2px; color: #999;">I</strong>nspire <strong style="letter-spacing: 2px; color: #999;">K</strong>indle <strong style="letter-spacing: 2px; color: #999;">O</strong>pportunities
         </p>
-        <p style="margin-top: 15px; font-family: Georgia, 'Times New Roman', serif; margin-bottom: 15px;">
-            <a href="https://instagram.com/lane_diko" target="_blank" style="color: #777; margin: 0 12px; text-decoration: none;">Instagram</a>
-            <span style="color: #777; margin: 0 12px;">·</span>
-            <span style="color: #777; margin: 0 12px; cursor: text;">silentlane@gmail.com</span>
+        <p style="margin-top: 15px; margin-bottom: 15px; display: flex; align-items: center; justify-content: center; gap: 20px;">
+            <a href="https://instagram.com/lane_diko" target="_blank">
+                <svg width="24" height="24">...</svg>
+            </a>
+            <a href="mailto:silentlane@gmail.com">
+                <svg width="24" height="24">...</svg>
+            </a>
         </p>
         <p style="margin-top: 20px; font-family: Georgia, 'Times New Roman', serif; font-size: 0.8em; letter-spacing: 1.5px;">© 2025 Lane DIKO</p>
     </footer>
@@ -964,5 +967,6 @@
     </script>
 </body>
 </html>
+
 
 
