--- a/index.html
+++ b/index.html
@@ -663,11 +663,17 @@
             <strong style="letter-spacing: 2px; color: #999;">D</strong>iscover <strong style="letter-spacing: 2px; color: #999;">I</strong>nspire <strong style="letter-spacing: 2px; color: #999;">K</strong>indle <strong style="letter-spacing: 2px; color: #999;">O</strong>pportunities
         </p>
         <p style="margin-top: 15px; margin-bottom: 15px; display: flex; align-items: center; justify-content: center; gap: 20px;">
-            <a href="https://instagram.com/lane_diko" target="_blank">
-                <svg width="24" height="24">...</svg>
+            <a href="https://instagram.com/lane_diko" target="_blank" style="color: #ddd; text-decoration: none; transition: color 0.3s;" 
+               onmouseover="this.style.color='#fff'" onmouseout="this.style.color='#ddd'" title="Instagram">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 2C6.477 2 2 6.477 2 12c0 5.522 4.477 10 10 10s10-4.478 10-10c0-5.523-4.477-10-10-10zm4.5 5.5h-9A1.5 1.5 0 006 9v6a1.5 1.5 0 001.5 1.5h9A1.5 1.5 0 0018 15V9a1.5 1.5 0 00-1.5-1.5zM12 9a3 3 0 110 6 3 3 0 010-6zm0 1a2 2 0 100 4 2 2 0 000-4zm3.5-1a.5.5 0 110 1 .5.5 0 010-1z" fill="currentColor"/>
+                </svg>
             </a>
-            <a href="mailto:silentlane@gmail.com">
-                <svg width="24" height="24">...</svg>
+            <a href="mailto:silentlane@gmail.com" style="color: #ddd; text-decoration: none; transition: color 0.3s;"
+               onmouseover="this.style.color='#fff'" onmouseout="this.style.color='#ddd'" title="Email">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" fill="currentColor"/>
+                </svg>
             </a>
         </p>
         <p style="margin-top: 20px; font-family: Georgia, 'Times New Roman', serif; font-size: 0.8em; letter-spacing: 1.5px;">© 2025 Lane DIKO</p>
@@ -967,6 +973,7 @@
     </script>
 </body>
 </html>
+
 
 
 
