--- a/index.html
+++ b/index.html
@@ -656,27 +656,42 @@
     </section>
 
     <!-- Footer -->
-    <footer>
-        <p style="margin-bottom: 20px; font-family: Georgia, 'Times New Roman', serif; color: #777; line-height: 1.6; max-width: 500px; margin-left: auto; margin-right: auto;">
+  <footer>
+        <p style="margin-bottom: 20px; color: #777; line-height: 1.6; max-width: 500px; margin-left: auto; margin-right: auto;">
             Photographer based in Kyoto, Japan<br>
             <strong style="letter-spacing: 2px; color: #999;">L</strong>ight <strong style="letter-spacing: 2px; color: #999;">A</strong>nd <strong style="letter-spacing: 2px; color: #999;">N</strong>arrative <strong style="letter-spacing: 2px; color: #999;">E</strong>xpression<br>   
             <strong style="letter-spacing: 2px; color: #999;">D</strong>iscover <strong style="letter-spacing: 2px; color: #999;">I</strong>nspire <strong style="letter-spacing: 2px; color: #999;">K</strong>indle <strong style="letter-spacing: 2px; color: #999;">O</strong>pportunities
         </p>
         <p style="margin-top: 15px; margin-bottom: 15px; display: flex; align-items: center; justify-content: center; gap: 20px;">
-            <a href="https://instagram.com/lane_diko" target="_blank" style="color: #ddd; text-decoration: none; transition: color 0.3s;" 
+            <a href="https://instagram.com/lane_diko" target="_blank" style="color: #ddd; text-decoration: none; transition: color 0.3s; display: inline-block; width: 30px; height: 24px;" 
                onmouseover="this.style.color='#fff'" onmouseout="this.style.color='#ddd'" title="Instagram">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12 2C6.477 2 2 6.477 2 12c0 5.522 4.477 10 10 10s10-4.478 10-10c0-5.523-4.477-10-10-10zm4.5 5.5h-9A1.5 1.5 0 006 9v6a1.5 1.5 0 001.5 1.5h9A1.5 1.5 0 0018 15V9a1.5 1.5 0 00-1.5-1.5zM12 9a3 3 0 110 6 3 3 0 010-6zm0 1a2 2 0 100 4 2 2 0 000-4zm3.5-1a.5.5 0 110 1 .5.5 0 010-1z" fill="currentColor"/>
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 30 24" style="enable-background:new 0 0 30 24; width: 100%; height: 100%;" xml:space="preserve">
+                    <g>
+                        <path fill="currentColor" d="M15,5.4c2.1,0,2.4,0,3.2,0c0.8,0,1.2,0.2,1.5,0.3c0.4,0.1,0.6,0.3,0.9,0.6c0.3,0.3,0.5,0.5,0.6,0.9
+                            c0.1,0.3,0.2,0.7,0.3,1.5c0,0.8,0,1.1,0,3.2s0,2.4,0,3.2c0,0.8-0.2,1.2-0.3,1.5c-0.1,0.4-0.3,0.6-0.6,0.9c-0.3,0.3-0.5,0.5-0.9,0.6
+                            c-0.3,0.1-0.7,0.2-1.5,0.3c-0.8,0-1.1,0-3.2,0s-2.4,0-3.2,0c-0.8,0-1.2-0.2-1.5-0.3c-0.4-0.1-0.6-0.3-0.9-0.6
+                            c-0.3-0.3-0.5-0.5-0.6-0.9c-0.1-0.3-0.2-0.7-0.3-1.5c0-0.8,0-1.1,0-3.2s0-2.4,0-3.2c0-0.8,0.2-1.2,0.3-1.5c0.1-0.4,0.3-0.6,0.6-0.9
+                            c0.3-0.3,0.5-0.5,0.9-0.6c0.3-0.1,0.7-0.2,1.5-0.3C12.6,5.4,12.9,5.4,15,5.4 M15,4c-2.2,0-2.4,0-3.3,0c-0.9,0-1.4,0.2-1.9,0.4
+                            c-0.5,0.2-1,0.5-1.4,0.9C7.9,5.8,7.6,6.2,7.4,6.8C7.2,7.3,7.1,7.9,7,8.7C7,9.6,7,9.8,7,12s0,2.4,0,3.3c0,0.9,0.2,1.4,0.4,1.9
+                            c0.2,0.5,0.5,1,0.9,1.4c0.4,0.4,0.9,0.7,1.4,0.9c0.5,0.2,1.1,0.3,1.9,0.4c0.9,0,1.1,0,3.3,0s2.4,0,3.3,0c0.9,0,1.4-0.2,1.9-0.4
+                            c0.5-0.2,1-0.5,1.4-0.9c0.4-0.4,0.7-0.9,0.9-1.4c0.2-0.5,0.3-1.1,0.4-1.9c0-0.9,0-1.1,0-3.3s0-2.4,0-3.3c0-0.9-0.2-1.4-0.4-1.9
+                            c-0.2-0.5-0.5-1-0.9-1.4c-0.4-0.4-0.9-0.7-1.4-0.9c-0.5-0.2-1.1-0.3-1.9-0.4C17.4,4,17.2,4,15,4L15,4L15,4z"/>
+                        <path fill="currentColor" d="M15,7.9c-2.3,0-4.1,1.8-4.1,4.1s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S17.3,7.9,15,7.9L15,7.9z M15,14.7c-1.5,0-2.7-1.2-2.7-2.7
+                            c0-1.5,1.2-2.7,2.7-2.7s2.7,1.2,2.7,2.7C17.7,13.5,16.5,14.7,15,14.7L15,14.7z"/>
+                        <path fill="currentColor" d="M20.2,7.7c0,0.5-0.4,1-1,1s-1-0.4-1-1s0.4-1,1-1S20.2,7.2,20.2,7.7L20.2,7.7z"/>
+                    </g>
                 </svg>
             </a>
-            <a href="mailto:silentlane@gmail.com" style="color: #ddd; text-decoration: none; transition: color 0.3s;"
+            <a href="mailto:silentlane@gmail.com" style="color: #ddd; text-decoration: none; transition: color 0.3s; display: inline-block; width: 30px; height: 24px;"
                onmouseover="this.style.color='#fff'" onmouseout="this.style.color='#ddd'" title="Email">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" fill="currentColor"/>
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 30 24" style="enable-background:new 0 0 30 24; width: 100%; height: 100%;" xml:space="preserve">
+                    <g>
+                        <path fill="currentColor" d="M15,13L7.1,7.1c0-0.5,0.4-1,1-1h13.8c0.5,0,1,0.4,1,1L15,13z M15,14.8l7.9-5.9v8.1c0,0.5-0.4,1-1,1H8.1c-0.5,0-1-0.4-1-1V8.8L15,14.8z"/>
+                    </g>
                 </svg>
             </a>
         </p>
-        <p style="margin-top: 20px; font-family: Georgia, 'Times New Roman', serif; font-size: 0.8em; letter-spacing: 1.5px;">© 2025 Lane DIKO</p>
+        <p style="margin-top: 20px; font-family: 'Courier New', Courier, monospace; font-size: 0.8em; letter-spacing: 1.5px;">© 2025 Lane DIKO</p>
     </footer>
 
     <!-- Modal with Zoom -->
@@ -973,6 +988,7 @@
     </script>
 </body>
 </html>
+
 
 
 
