--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
 
     <!-- Footer -->
   <footer>
-        <p style="margin-bottom: 20px; color: #777; line-height: 1.6; max-width: 500px; margin-left: auto; margin-right: auto;">
+        <p style="margin-bottom: 20px; color: #777; line-height: 1.6; max-width: 500px; font-family: Georgia, 'Times New Roman', serif; margin-left: auto; margin-right: auto;">
             Photographer based in Kyoto, Japan<br>
             <strong style="letter-spacing: 2px; color: #999;">L</strong>ight <strong style="letter-spacing: 2px; color: #999;">A</strong>nd <strong style="letter-spacing: 2px; color: #999;">N</strong>arrative <strong style="letter-spacing: 2px; color: #999;">E</strong>xpression<br>   
             <strong style="letter-spacing: 2px; color: #999;">D</strong>iscover <strong style="letter-spacing: 2px; color: #999;">I</strong>nspire <strong style="letter-spacing: 2px; color: #999;">K</strong>indle <strong style="letter-spacing: 2px; color: #999;">O</strong>pportunities
@@ -988,6 +988,7 @@
     </script>
 </body>
 </html>
+
 
 
 
