--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                 </svg>
             </a>
         </p>
-        <p style="margin-top: 20px; font-family: 'Courier New', Courier, monospace; font-size: 0.8em; letter-spacing: 1.5px;">© 2025 Lane DIKO</p>
+        <p style="margin-top: 20px; font-family: Georgia, 'Times New Roman', serif; font-size: 0.8em; letter-spacing: 1.5px;">© 2025 Lane DIKO</p>
     </footer>
 
     <!-- Modal with Zoom -->
@@ -988,6 +988,7 @@
     </script>
 </body>
 </html>
+
 
 
 
